--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -47,11 +47,18 @@
     <link href="/css/signin.css" rel="stylesheet">
   </head>
   <body class="text-center">
+
     
 <main class="form-signin">
   <form action="/user/login" method="POST">
     <!-- <img class="mb-4" src="/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57"> -->
     <h1 class="h3 mb-3 fw-normal">Sign in</h1>
+
+
+    <% if(failed.length > 0) {%>
+      <p class="alert alert-danger"><%= failed %></p>
+    <% } %>
+
 
     <div class="form-floating">
       <input type="email" name="email" class="form-control" id="floatingInput" placeholder="name@example.com" required="true">
@@ -62,11 +69,11 @@
       <label for="floatingPassword">Password</label>
     </div>
 
-    <div class="checkbox mb-3">
+    <!-- <div class="checkbox mb-3">
       <label>
         <input type="checkbox" value="remember-me"> Remember me
       </label>
-    </div>
+    </div> -->
     <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
     <p class="mt-5 mb-3 text-muted">&copy; 2023 Atat Company</p>
   </form>
