--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,6 +2,6 @@
 <%- include('../partials/header.ejs') %>
 <body>
     
-    <h1>Index</h1>
+    <h2 id="index-welcome" style="text-align: center; font-weight: bold;">Please login to continue.</h2>
 </body>
 <%- include('../partials/footer.ejs') %>
