--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,5 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= typeof title != 'undefined' ? title: 'Page' %></title>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <link href="/css/bootstrap.min.css" rel="stylesheet">
   </head>
