--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/head.ejs') %>
 <%- include('../partials/header.ejs') %>
-<body>
-    
-    <h2 id="index-welcome" style="text-align: center; font-weight: bold;">Please login to continue.</h2>
+
+<body id="body">
+    <h2 style="text-align: center; font-weight: bold;">Please login to continue.</h2>
 </body>
 <%- include('../partials/footer.ejs') %>
