--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -7,9 +7,8 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.84.0">
+    
     <title>Sign up</title>
-
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/sign-in/">
 
     
 
@@ -46,7 +45,7 @@
     <!-- Custom styles for this template -->
     <link href="/css/signin.css" rel="stylesheet">
   </head>
-  <body class="text-center">
+  <body class="text-center" id="body">
     
 <main class="form-signin">
   <form action="/user/register" method="POST">
@@ -63,18 +62,13 @@
 
     <div class="form-floating">
       <input type="email" name="email" value="<%= email %>" class="form-control" id="floatingInput" placeholder="">
-      <label for="floatingInput">Email address</label>
+      <label for="floatingInput" style="background-color: transparent;">Email address</label>
     </div>
     <div class="form-floating">
       <input type="password" name="password" value="<%= password %>" class="form-control" id="floatingPassword" placeholder="">
-      <label for="floatingPassword">Password</label>
+      <label for="floatingPassword" style="background-color: transparent;">Password</label>
     </div>
 
-    <!-- <div class="checkbox mb-3">
-      <label>
-        <input type="checkbox" value="remember-me"> Remember me
-      </label>
-    </div> -->
     <button class="w-100 btn btn-lg btn-primary" type="submit">Sign up</button>
     <p class="mt-5 mb-3 text-muted">&copy; 2023 Atat Company</p>
   </form>
