--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -1,7 +1,11 @@
 <%- include('../partials/head.ejs') %>
 <%- include('../partials/header.ejs') %>
+<body class="text-center">
 
-<body id="body" class="text-center">
-    <h2 style="text-align: center; font-weight: bold;">Please login to continue.</h2>
+    <h3>Hello, everyone!</h3>
+    <h4>This is my first introductory project.</h4>
+
+    
 </body>
+
 <%- include('../partials/footer.ejs') %>
