--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/head.ejs') %>
 <%- include('../partials/header.ejs') %>
 
-<body id="body">
+<body id="body" class="text-center">
      <script>
     //jquery
         // $(document).ready(function () {
