--- a/views/pages/products.ejs
+++ b/views/pages/products.ejs
@@ -1,7 +1,10 @@
 <%- include('../partials/head.ejs') %>
 <%- include('../partials/header.ejs') %>
 
-<body id="body" class="text-center">
-    <h2 style="text-align: center; font-weight: bold;">Please login to continue.</h2>
+<body class="text-center">
+  <ul>
+    <li><a href="/api/v1/getAll">View All Products</a></li>
+  </ul>
 </body>
+
 <%- include('../partials/footer.ejs') %>
