--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,10 +10,10 @@
 
       <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
         <li><a href="/" class="nav-link px-2 ">Home</a></li>
-        <li><a href="#" class="nav-link px-2">Features</a></li>
-        <li><a href="#" class="nav-link px-2">Pricing</a></li>
-        <li><a href="#" class="nav-link px-2">FAQs</a></li>
-        <li><a href="#" class="nav-link px-2">About</a></li>
+        <li><a href="/products" class="nav-link px-2">Products</a></li>
+        <!-- <li><a href="#" class="nav-link px-2">Pricing</a></li>
+        <li><a href="#" class="nav-link px-2">FAQs</a></li> -->
+        <li><a href="/about" class="nav-link px-2">About</a></li>
       </ul>
 
 
