--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -2,10 +2,9 @@
 <%- include('../partials/header.ejs') %>
 <body class="text-center">
 
-    <h3>Hello, everyone!</h3>
-    <h4>This is my first project.</h4>
+    <h1>404 Not Found...</h1>
 
-    <a href="mailto:gawinvernon@gmail.com">Contact Me</a>
+    
 </body>
 
 <%- include('../partials/footer.ejs') %>
