--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -15,7 +15,7 @@
         }, 3000)
 
     </script> 
-    <p class="alert alert-success" style="margin: auto; width: 10%; padding: 10px;" id="3sec"><%= success %></p>
+    <p class="alert alert-success container"  id="3sec"><%= success %></p>
     <h2 id="text-center" style="text-align: center;">Welcome back!</h2>
     </p>
 </body>
