--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,6 +2,6 @@
 <%- include('../partials/header.ejs') %>
 
 <body id="body" class="text-center">
-    <h2 style="text-align: center; font-weight: bold;">Please login to continue.</h2>
+    <h2 style="text-align: center; font-weight: bold;">Welcome!<br> Please login to continue.</h2>
 </body>
 <%- include('../partials/footer.ejs') %>
