--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,9 @@
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
       <div class="col-md-3 mb-2 mb-md-0">
         <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
-          <svg width="100" height="100" role="img"><circle cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="#0d6efd"></svg>
+          <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-brilliance" viewBox="0 0 16 16">
+            <path d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16M1 8a7 7 0 0 0 7 7 3.5 3.5 0 1 0 0-7 3.5 3.5 0 1 1 0-7 7 7 0 0 0-7 7"/>
+          </svg>
         </a>
       </div>
 
@@ -19,7 +21,7 @@
 
       <div class="col-md-3 text-end">
         <% if(!loggedIn) { %>
-            <a type="button" class="btn btn-outline-primary me-2" href="/login">Login</a>
+            <a type="button" class="btn btn-primary me-2" href="/login">Login</a>
             <a type="button" class="btn btn-primary" href="/register">Sign up</a>        
         <% } %>
 
