--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -2,10 +2,11 @@
 <%- include('../partials/header.ejs') %>
 <body class="text-center">
 
-    <h3>Hello, everyone!</h3>
-    <h4>This is my first project.</h4>
+    <h2>Hello, everyone!</h2>
+    <h3>This is my first project which focusing on: </h3>
+    <h3>Express js and Mongoose.</h3>
 
-    <a href="mailto:gawinvernon@gmail.com">Contact Me</a>
+    <a href="mailto:gawinvernon@gmail.com" class="btn btn-primary mt-5">Contact Me</a>
 </body>
 
 <%- include('../partials/footer.ejs') %>
