--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -5,5 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= typeof title != 'undefined' ? title: 'Page' %></title>
     <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet2" href="/css/custom.css">
     
   </head>
