--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -16,7 +16,7 @@
 
     </script> 
     <p class="alert alert-success container"  id="3sec"><%= success %></p>
-    <h2 id="text-center" style="text-align: center;">Welcome back!</h2>
+    <h2 id="text-center" style="text-align: center;">Welcome back!  <%= user.email %> </h2>
     </p>
 </body>
 <%- include('../partials/footer.ejs') %>
