--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,7 +26,7 @@
         <% } %>
 
         <% if(loggedIn) {%>
-            <p>Welcome <%= user.email %></p>
+            <p>Welcome, <%= user.email %></p>
             <a type="button" class="btn btn-danger" href="/logout">Logout</a>
         <% } %>
       
